fix a ui issue with bootstrap modals and scrollbars

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -68,3 +68,11 @@ pre.prettyjson {
 .start_hidden {
   display: none;
 }
+
+// used by bootstrap_modal_patch.js
+.scrollbar-measure {
+  height: 100px;
+  overflow: scroll;
+  position: absolute;
+  top: -9999px;
+}
